--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Raleway&display=swap&family=Material+Icons');
 
 :root {
   --main-bg: #d0f2ff;
